--- a/my-bio.html
+++ b/my-bio.html
@@ -1,6 +1,8 @@
 <!DOCKTYPE html>
 <html>
   <head>
+    <link href="css/styles.css" rel="stylesheet" type="text/css"
+    media="all">
     <title>My First Bio Page</title>
   </head>
   <body>
