--- a/my-bio.html
+++ b/my-bio.html
@@ -34,5 +34,5 @@
   this page please contact
   <a href="mailto:farnoosh@pdx.edu"> admin </a>
 </p>
-<a href="my-first-webpage.html"> Go back to My First Page </a>
+<a href="index.html"> Go back to My First Page </a>
 <h6>  &copy; 2016 Farnoosh, Inc.</h6>
